<resources>
    <string name="app_name">Travel App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="create_an_account">Create an Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="by_pressing_sign_up_you_agree_with_the_terms_of_services_and_privacy_policy">By pressing Sign Up you agree with the Terms of Services and Privacy Policy</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="login_here">Login here.</string>
    <string name="already_a_user">Already a user?\u0020</string>
    <string name="lowercase_last_name">last name</string>
    <string name="lowercase_first_name">last name</string>
    <string name="lowercase_address">address</string>
    <string name="lowercase_email">email</string>
    <string name="lowercase_mobile">mobile</string>
    <string name="lowercase_password">password</string>

    <string name="from">From</string>
    <string name="origin">Origin</string>
    <string name="to">To</string>
    <string name="destination">Destination</string>
    <string name="search_buses">SEARCH BUSES</string>
    <string name="journey_date">Journey Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="submit">Submit</string>
    <string name="enter_the_email_address_that_you_registered_with_and_we_will_send_you_the_instructions_to_reset_your_password">Enter the email address that you registered with and we will send you the instructions to reset your password</string>
    <string name="email_phone_no">Email/Phone No.</string>

    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account_hehe">CREATE NEW ACCOUNT HEHE</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_account">don\'t have account</string>
    <string name="continue_text">CONTINUE</string>
    <string name="pnr_number">PNR Number</string>
    <string name="date">date</string>
    <string name="lowercase_origin">origin</string>
    <string name="lowercase_destination">destination</string>
    <string name="seat_selection">Seat Selection</string>
</resources>
