<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.forgotpassword.ForgotPasswordFragment">

    <android.support.constraint.ConstraintLayout
        style="@style/AppPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forgot_password_email_til"
            style="@style/AuthnTextInputLayoutStyle"
            android:hint="@string/email"
            tools:ignore="MissingConstraints">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/forgot_password_email_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_email_address_that_you_registered_with_and_we_will_send_you_the_instructions_to_reset_your_password"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_email_til"
            />

        <android.support.design.button.MaterialButton
            android:id="@+id/forgot_password_submit_btn"
            style="@style/AuthnButtonStyle"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>