<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CancelTicketFragment">

    <android.support.constraint.ConstraintLayout
        style="@style/AppPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">







        <android.support.design.widget.TextInputLayout
            android:id="@+id/cancel_pnr_number_til"
            style="@style/AuthnTextInputLayoutStyle"
            android:hint="@string/pnr_number"

            app:layout_constraintBottom_toTopOf="@+id/cancel_mobile_til"
            app:layout_constraintTop_toBottomOf="parent"
            tools:ignore="MissingConstraints">

            <android.support.design.widget.TextInputEditText
                android:inputType="number"
                android:id="@+id/login_mobile_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/cancel_mobile_til"
            style="@style/AuthnTextInputLayoutStyle"
            android:hint="@string/email_phone_no"
            app:layout_constraintTop_toBottomOf="@+id/cancel_pnr_number_til"
            tools:ignore="MissingConstraints">

            <android.support.design.widget.TextInputEditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/cancel_date_til"
            style="@style/AuthnTextInputLayoutStyle"
            android:hint="@string/date"
            app:layout_constraintTop_toBottomOf="@+id/cancel_mobile_til"
            tools:ignore="MissingConstraints">

            <android.support.design.widget.TextInputEditText
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.button.MaterialButton
            android:id="@+id/login_sign_in_btn"
            style="@style/AuthnButtonStyle"
            android:text="CONTINUE"
            app:layout_constraintTop_toBottomOf="@+id/cancel_date_til"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="230dp" />



    </android.support.constraint.ConstraintLayout>
</ScrollView>

